# tree-sitter-rst

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  grammar.js  package-lock.json  package.json  plan.md  pyproject.extra.toml  pyproject.toml  quick_test.js  ruff.toml  setup.py  test_bullet.rst  tree-sitter-rst.wasm
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  zizmor.yml
bindings/python/tests/: test_backslash_escape.py
bindings/python/tree_sitter_rst/: __init__.py
docs/backslash-examples/: Makefile  conf.py  index.rst
docs/js/: tree-sitter-parser.wasm
src/: grammar.json  node-types.json  parser.c
src/tree_sitter_rst/: chars.c  chars.h  parser.c  parser.h  scanner.c  table.c  table.h  tokens.h
test/: test_byte_ranges.py
test/corpus/: body_elements.txt  inline_markup.txt  lists.txt  partial_fixes.txt
test/corpus_byte_ranges/: body_elements.txt  inline_markup.txt  tables.txt
utils/: apply_pyproject_extras.py
