[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-rst"
description = "reStructuredText grammar for tree-sitter"
version = "0.2.0"
keywords = ["incremental", "parsing", "tree-sitter", "rst"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Santos Gallegos", email = "stsewd@proton.me" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/stsewd/tree-sitter-rst"
Funding = "https://github.com/sponsors/stsewd"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

# >>> pyproject.extra.toml (managed by utils/apply_pyproject_extras.py) >>>
# Sections appended to pyproject.toml after `tree-sitter generate`.
#
# `tree-sitter generate` rewrites pyproject.toml from a template and would
# drop any hand-added sections. Anything we want to preserve across
# regenerations lives here and is re-appended by `utils/apply_pyproject_extras.py`
# (run via `make generate-bindings`).

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
# <<< pyproject.extra.toml <<<
